# Emis3D

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
examples/radDist/: CreateRadDist.ipynb  CreateRadDist_helical.ipynb  elongatedRing_config_example.yaml  helical_config_example.yaml
examples/runEmis3D/example_data/: 184407_runConfig.yaml
examples/sxrChords/: sxrChordPlotter.ipynb
main/: Diagnostic.py  Emis3D.py  Fieldline_Tracer.py  Globals.py  Tokamak.py  Util.py  Util_emis3D.py  Util_plotting.py  Util_radDist.py  __init__.py  radDist.py  radDistFitting.py  test_util.py
runProgramScripts/: make_radDists.py  run_emis3D.py
testingScripts/: boloJET_comparison.py  bolometerJET.py  cameraBoxAddition.py  emis3DTester.py  fieldLineTester.py  helical_endpoint_testing.py  newHelical_radDist_tester.py  postProcessing_testing.py  radDistDebugger_DIII-D.py  radDistTester_DIII-D.py  radDistTester_JET.py  radDist_dataTester_JET.py  solverTester.py  sxrChordTester.py  sxrDIII-DEtendueComparison.py  sxrJETEtendueComparison.py  synthCamera.py  synthCameraJET.py
tests/: test_helical_endpoint.py  test_raddist_fitting.py  test_util.py  test_util_emis3d.py  test_util_raddist.py
tokamaks/DIII-D/: DIII-D_settings.yaml
tokamaks/DIII-D/inputs/sxrInfo/: DISRADU_DOWN_config.yaml  DISRADU_UP_config.yaml  SX45F_DOWN_config.yaml  SX45F_UP_config.yaml  SX90MF_DOWN_config.yaml  SX90MF_UP_config.yaml  SX90PF_DOWN_config.yaml  SX90PF_UP_config.yaml
tokamaks/DIII-D/sxrSavers/: SXR_crossCalib_Config.yaml  Util_SXR.py  radiation.py
