[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "emis3d"
version = "0.1.0"
description = "Fit synthetic radiation distributions against tokamak SXR/bolometer measurements."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"
dependencies = [
    "cherab>=1.5.0",
    "raysect==0.8.1.*",
    "numpy<2.0",
    "scipy>=1.16.3",
    "matplotlib>=3.10.8",
    "numba>=0.64.0",
    "lmfit>=1.3.4",
    "freeqdsk>=0.5.2",
    "h5py",
    "pandas",
    "pyyaml",
    "dill",
]

[tool.setuptools]
packages = ["main"]
